--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -21,7 +21,7 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v2
 
       - name: Log in to Docker Hub
