--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -3,6 +3,7 @@ on: push
 
 jobs:
   build-and-push-image:
+    environment: secrets
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
