--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -4,7 +4,7 @@ on: push
 jobs:
   build-and-push-image:
     environment: docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    
     strategy:
       fail-fast: false
       matrix:
@@ -22,6 +22,8 @@ jobs:
       packages: write
 
     steps:
+      - run: |
+        echo KEY: '${DOCKER_PASSWORD}'
       - name: Checkout repo
         uses: actions/checkout@v3
 
