--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,47 +1,42 @@
-name: Build & publish images
-on: push
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+# GitHub recommends pinning actions to a commit SHA.
+# To get a newer version, you will need to update the SHA.
+# You can also reference a tag or branch, but the action may change without warning.
+
+name: Publish Docker image
+
+on:
+  push
 
 jobs:
-  build-and-push-image:
-    environment: docker
-    runs-on: ubuntu-latest    
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - dockerfile: ./udagram-api-feed/dockerfile
-            image: oyinbayode/udagram-api-feed
-          - dockerfile: ./udagram-reverseproxy/dockerfile
-            image: oyinbayode/udagram-reverseproxy
-          - dockerfile: ./udagram-api-user/dockerfile
-            image: oyinbayode/udagram-api-user
-          - dockerfile: ./udagram-frontend/dockerfile
-            image: oyinbayode/udagram-frontend
-    permissions:
-      contents: read
-      packages: write
-
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Check out the repo
         uses: actions/checkout@v3
-
+      
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ github.actor }}
-          password: 'B@1ya4da2'
-          
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ matrix.image }}
-
+          images: oyinbayode/udagram-api-feed
+      
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
-          file: ${{ matrix.dockerfile }}
           push: true
+          files: ./udagram-api-feed/dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
