--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,8 @@ jobs:
       - run:
           name: Publish Docker Image to Docker Hub
           command: |
-            echo docker login --username oyinbayode
+            docker logout 
+            docker login --username oyinbayode
             echo "${DOCKER_ID}"
             IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
             docker tag $IMAGE_NAME:latest $IMAGE_NAME:$IMAGE_TAG
